# haskell-minis

./: .gitignore  CHANGELOG.md  LICENSE  README.org  cabal.project  cabal.project.local  haskell-minis.cabal
bytecode/ByteCode/: Data.hs  Evaluator.hs  Parser.hs
connected4/: AIPlayers.hs  BitBoard.hs  GameSearch.hs  Heuristics.hs  Logic.hs  Main.hs  SimpleBoard.hs  Types.hs
data/: bytecode-example-input.txt  bytecode-fib.txt
