cabal-version:          2.4
name:                   haskell-minis
version:                0.1.0.0
synopsis:               Contains multiple small programs built for learning haskell
description:            The goal is to learn haskell as well as cabal build tool. It should be possible to run the small programs directly from the command line.
homepage:               https://github.com/0vais/haskell-minis
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Ovais
maintainer:             Ovais <mailovais85@gmail.com>
build-type:             Simple
extra-source-files:    
    CHANGELOG.md
    LICENSE

executable connected4
    main-is: Main.hs
    hs-source-dirs: connected4
    other-modules: Logic, Types, SimpleBoard
    build-depends:
        base >=4.7 && <4.17
      , containers >=0.1 && <0.7
      , text >=0.11.1 && <2.1
      , text-show ^>=3.9.6
      , transformers >=0.5.6 && <0.6
      , mtl ^>=2.2.2
    default-language: Haskell2010
    -- other-extensions:

executable bytecode
    main-is: ByteCode/Evaluator.hs
    hs-source-dirs: bytecode
    other-modules: ByteCode.Data, ByteCode.Parser
    build-depends:
        base >=4.7 && <4.17
      , containers >=0.1 && <0.7
      , split ^>=0.2.3.4
      , text >=0.11.1 && <2.1
      , text-show ^>=3.9.6
      , transformers >=0.5.6 && <0.6
      , mtl ^>=2.2.2
    default-language: Haskell2010
